--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="test_osc">Test OSC</string>
     <string name="title_settings">Settings</string>
+    <string name="hint_grandma_ip">IP from Grandma example: (192.168.179.34)</string>
+    <string name="hint_grandma_port">OSC In Port from GrandMA. Default is (8000)</string>
+    <string name="submit">Submit</string>
 </resources>
